# parch-profiler

./: CONTRIBUTING.md  LICENSE  README.md  __main__.py  profiler.py  pyproject.toml
src/parch-profiler/: profiler.py
src/parch-profiler/pckmng/: __init__.py  aur.py  base.py  flatpak.py  pacman.py
src/parch_profiler/: cli.py  nvim.py  profiler-old.py  profiler.py  systemd.py
src/parch_profiler/pckmng/: __init__.py  aur.py  base.py  flatpak.py  pacman.py
